--- a/client/package.json
+++ b/client/package.json
@@ -39,7 +39,8 @@
     "react-native-screens": "~4.10.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "expo-secure-store": "~14.2.3"
+    "expo-secure-store": "~14.2.3",
+    "expo-document-picker": "~13.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
