--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "multer": "^2.0.0",
+    "node-cron": "^4.0.7",
     "openai": "^4.103.0",
     "pdf-parse": "^1.1.1",
     "pg": "^8.16.0",
