--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.5",
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "expo-server-sdk": "^3.15.0",
     "express": "^5.1.0",
     "google-auth-library": "^9.15.1",
     "jsonrepair": "^3.12.0",
@@ -26,6 +29,7 @@
     "pdf-parse": "^1.1.1",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
+    "sendgrid": "^5.2.3",
     "typeorm": "^0.3.24"
   },
   "devDependencies": {
