--- a/client/app.json
+++ b/client/app.json
@@ -4,8 +4,8 @@
     "slug": "syllabus-buddy",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "icon": "./assets/images/logo.png",
+    "scheme": "studyapp",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/images/splash.png",
@@ -48,6 +48,14 @@
       "router": {},
       "eas": {
         "projectId": "fa8da59a-abb3-42cc-8ea1-0b0b3bbfc5f9"
+      }
+    },
+    "linking": {
+      "prefixes": ["studyapp://", "https://yourdomain.com"],
+      "config": {
+        "screens": {
+          "verify-email": "verify-email"
+        }
       }
     }
   }
