--- a/client/app.json
+++ b/client/app.json
@@ -8,7 +8,7 @@
     "scheme": "studyapp",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/images/logo.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
