--- a/server/package.json
+++ b/server/package.json
@@ -7,14 +7,20 @@
     "build": "tsc",
     "start": "node dist/app.js",
     "worker": "nodemon src/workers/index.ts",
-    "worker:prod": "node dist/workers/index.js"
+    "worker:prod": "node dist/workers/index.js",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:run": "npm run typeorm migration:run -- -d src/db/data-source.ts",
+    "migration:revert": "npm run typeorm migration:revert -- -d src/db/data-source.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.826.0",
+    "@aws-sdk/s3-request-presigner": "^3.826.0",
     "@sendgrid/mail": "^8.1.5",
+    "@types/multer-s3": "^3.0.3",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
@@ -27,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "multer": "^2.0.0",
+    "multer-s3": "^3.0.1",
     "node-cron": "^4.0.7",
     "openai": "^4.103.0",
     "pdf-parse": "^1.1.1",
@@ -34,7 +41,8 @@
     "reflect-metadata": "^0.2.2",
     "sendgrid": "^5.2.3",
     "tesseract.js": "^6.0.1",
-    "typeorm": "^0.3.24"
+    "typeorm": "^0.3.24",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
