--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@aws-sdk/s3-request-presigner": "^3.826.0",
     "@sendgrid/mail": "^8.1.5",
     "@types/multer-s3": "^3.0.3",
+    "@types/nodemailer": "^6.4.17",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
@@ -35,6 +36,7 @@
     "multer": "^2.0.0",
     "multer-s3": "^3.0.1",
     "node-cron": "^4.0.7",
+    "nodemailer": "^7.0.3",
     "openai": "^4.103.0",
     "pdf-parse": "^1.1.1",
     "pg": "^8.16.0",
