--- a/server/local.env
+++ b/server/local.env
@@ -5,3 +5,31 @@ DB_USER=postgres
 DB_PASS=root
 DB_NAME=syllabus_buddy
 JWT_SECRET=supersecretkey
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+OPENAI_API_KEY=
+
+# AWS SQS Configuration
+AWS_REGION=ap-south-1
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+SQS_QUEUE_URL=
+
+NOTIFICATION_QUEUE_URL=
+SYLLABUS_QUEUE_URL=
+
+# Email Configuration
+# SENDGRID_API_KEY=
+SENDGRID_API_KEY=
+
+FROM_EMAIL=
+
+
+# App Configuration
+APP_URL=
+
+# APP_URL=syllabusbuddy://
+
+FRONTEND_URL=e
+RUN_WORKERS=true
