--- a/server/package.json
+++ b/server/package.json
@@ -44,7 +44,9 @@
     "sendgrid": "^5.2.3",
     "tesseract.js": "^6.0.1",
     "typeorm": "^0.3.24",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "winston": "^3.13.0",
+    "winston-cloudwatch": "^6.3.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
