--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.826.0",
     "@aws-sdk/s3-request-presigner": "^3.826.0",
+    "@google/generative-ai": "^0.24.1",
     "@sendgrid/mail": "^8.1.5",
     "@types/multer-s3": "^3.0.3",
     "@types/nodemailer": "^6.4.17",
