--- a/server/.ebextensions/nginx.config
+++ b/server/.ebextensions/nginx.config
@@ -1,5 +1,5 @@
 files:
-  "/etc/nginx/conf.d/proxy.conf":
+  "/etc/nginx/conf.d/client_max_body_size.conf":
     mode: "000644"
     owner: root
     group: root
