--- a/server/.ebextensions/nginx.config
+++ b/server/.ebextensions/nginx.config
@@ -1,7 +1,8 @@
-files:
-  "/etc/nginx/conf.d/client_max_body_size.conf":
-    mode: "000644"
-    owner: root
-    group: root
-    content: |
+container_commands:
+  01_nginx_max_body_size:
+    command: |
+      cat > /etc/nginx/conf.d/client_max_body_size.conf <<EOF
       client_max_body_size 50M;
+      EOF
+  02_reload_nginx:
+    command: "sudo service nginx reload"
