--- a/server/package.json
+++ b/server/package.json
@@ -47,7 +47,8 @@
     "typeorm": "^0.3.24",
     "uuid": "^11.1.0",
     "winston": "^3.13.0",
-    "winston-cloudwatch": "^6.3.0"
+    "winston-cloudwatch": "^6.3.0",
+    "zod": "^3.25.64"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
